--- a/src/app/views/pages/search/search.component.html
+++ b/src/app/views/pages/search/search.component.html
@@ -1,3 +1,6 @@
+<div class="logo">
+    <img src="../../../../assets/images/targaryen.png" alt="">
+</div>
 <app-search-bar></app-search-bar>
 <div class="ui divider"></div>
 <app-search-result></app-search-result>
