--- a/src/app/views/pages/search/search.component.scss
+++ b/src/app/views/pages/search/search.component.scss
@@ -4,5 +4,12 @@ app-search-result {
 }
 
 .ui.divider {
-    margin: 5%;
+    margin-bottom: 4%;
+}
+
+.logo {
+    text-align: center;
+    img {
+        width: 30%;
+    }
 }
