--- a/src/app/views/pages/login/login.component.scss
+++ b/src/app/views/pages/login/login.component.scss
@@ -257,7 +257,15 @@ svg#clouds {
 }
 
 
+
 /* Responsive Styles */
+@media screen and (min-width: 767px) {
+
+  .ui.stacked.segment {
+    width: 50%;
+    display: inline-block;
+  }
+}
 @media screen and (max-width: 767px) {
 
   .card-container>*:not(.circle-link),
