--- a/src/app/views/components/search-bar/search-bar.component.html
+++ b/src/app/views/components/search-bar/search-bar.component.html
@@ -1,32 +1,13 @@
-  <!-- <div id="primary" class="ui right action left icon huge input">
-    <i class="search icon"></i>
-    <input matInput #query type="text" placeholder="Search">
-    <div class="ui basic floating dropdown button">
-      <div class="text">All</div>
-      <i class="dropdown icon"></i>
-      <div class="menu">
-        <div class="item" (click)="bookFilter = true; characterFilter = true; houseFilter = true;">All</div>
-        <div class="item" (click)="bookFilter = true; characterFilter = false; houseFilter = false;">Books</div>
-        <div class="item" (click)="bookFilter = false; characterFilter = true; houseFilter = false;">Characters</div>
-        <div class="item" (click)="bookFilter = false; characterFilter = false; houseFilter = true;">Houses</div>
-      </div>
-    </div>
-    <div class="ui basic button">
-      <i class="filter icon" (click)="filter = ! filter"></i>
-    </div>
-    <div class="ui button" (click)="onSearch(query.value)">Search</div>
-  </div> -->
-
   <form id="primary" class="ngm ui grid">
     <div class="eleven wide column">
       <mat-form-field class="search">
-        <input #query matInput placeholder="Search">
+        <input #query matInput placeholder="Search" (keyup)="onFilter(query.value)">
       </mat-form-field>
     </div>
     <div class="three wide column">
       <mat-form-field>
         <mat-label>Resources</mat-label>
-        <mat-select [formControl]="resourceControl">
+        <mat-select [formControl]="resourceControl" (selectionChange)="onSearch(query.value)">
           <mat-option *ngFor="let resource of resources" [value]="resource">
             {{resource}}
           </mat-option>
@@ -61,7 +42,7 @@
     </div>
   </div>
 
-  <div *ngIf="!filter" class="filters">
+  <div *ngIf="filter" class="filters">
     <!-- Book Filter -->
     <div *ngIf="resourceControl.value === 'Books'" class="ngm book filter">
       <mat-form-field style="margin-right: 10px;">
@@ -172,3 +153,5 @@
       </div>
     </div>
   </div>
+
+  <ngx-spinner></ngx-spinner>
