--- a/src/app/views/pages/search/search.component.html
+++ b/src/app/views/pages/search/search.component.html
@@ -2,7 +2,7 @@
   <img src="../../../../assets/images/targaryen.png" alt="">
 </div>
 <app-search-bar></app-search-bar>
-<div class="ui divider"></div>
+<!-- <div class="ui divider"></div> -->
 
 <div *ngIf="items$ | async as data" class="search result">
     <app-search-result [items]="items$"></app-search-result>
