--- a/src/app/views/components/search-bar/search-bar.component.html
+++ b/src/app/views/components/search-bar/search-bar.component.html
@@ -1,17 +1,15 @@
   <form id="primary" class="ngm ui grid">
-    <div class="eleven wide column">
+    <div class="fifteen wide column">
       <mat-form-field class="search">
-        <input #query matInput placeholder="Search" (keyup)="onFilter(query.value)">
-      </mat-form-field>
-    </div>
-    <div class="three wide column">
-      <mat-form-field>
-        <mat-label>Resources</mat-label>
-        <mat-select [formControl]="resourceControl" (selectionChange)="onSearch(query.value)">
-          <mat-option *ngFor="let resource of resources" [value]="resource">
-            {{resource}}
+        <input type="text" placeholder="Search..." aria-label="Number" matInput [formControl]="queryControl"
+          [matAutocomplete]="auto" (keyup)="onFilter()">
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option *ngFor="let option of (searchOptions | async)" [value]="option.text">
+            <a (click)="onAutocomplete(option.url)">
+              {{option.text}}
+            </a>
           </mat-option>
-        </mat-select>
+        </mat-autocomplete>
       </mat-form-field>
     </div>
     <div class="one wide column middle aligned">
@@ -19,137 +17,158 @@
         <mat-icon>filter_list</mat-icon>
       </a>
     </div>
+  </form>
+  <form id="secondary" class="ngm ui grid">
+    <div class="twelve wide column">
+      <mat-form-field class="search">
+        <input type="text" placeholder="Search..." aria-label="Number" matInput [formControl]="queryControl"
+          [matAutocomplete]="auto" (keyup)="onFilter()">
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option *ngFor="let option of (searchOptions | async)" [value]="option.text">
+            <a (click)="onAutocomplete(option.url)">
+              {{option.text}}
+            </a>
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </div>
     <div class="one wide column middle aligned">
-      <a mat-icon-button aria-label="Search" (click)="onSearch(query.value)">
-        <mat-icon>search</mat-icon>
+      <a mat-button aria-label="Advanced filter" (click)="toggleFilter()">
+        <mat-icon>filter_list</mat-icon>
       </a>
     </div>
   </form>
 
-  <div *ngIf="warning" class="ui warning message transition">
-    <i class="close icon" (click)="warning = false"></i>
-    <div class="header">
-      Please select a resource to use advanced filters!
-    </div>
-  </div>
-
-  <div id="secondary">
-    <div class="ui big action input">
-      <input type="text" placeholder="Search">
-      <div class="ui button">
-        <i class="filter icon"></i>
-      </div>
-    </div>
-  </div>
-
-  <div *ngIf="filter" class="filters">
-    <!-- Book Filter -->
-    <div *ngIf="resourceControl.value === 'Books'" class="ngm book filter">
-      <mat-form-field style="margin-right: 10px;">
-        <mat-label>Start date</mat-label>
-        <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startpicker" [formControl]="startDate">
-        <mat-datepicker-toggle matSuffix [for]="startpicker"></mat-datepicker-toggle>
-        <mat-datepicker #startpicker></mat-datepicker>
-      </mat-form-field>
+  <div *ngIf="filter" class="filter-group row">
+    <div class="ngm resource">
       <mat-form-field>
-        <mat-label>End date</mat-label>
-        <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="endpicker" [formControl]="endDate">
-        <mat-datepicker-toggle matSuffix [for]="endpicker"></mat-datepicker-toggle>
-        <mat-datepicker #endpicker></mat-datepicker>
-      </mat-form-field>
-    </div>
-
-    <!-- Character Filter -->
-    <div *ngIf="resourceControl.value === 'Characters'" class="ngm character filter">
-      <mat-form-field>
-        <mat-label>Gender</mat-label>
-        <mat-select [formControl]="genderControl">
-          <mat-option *ngFor="let gender of genders" [value]="gender">
-            {{gender}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Culture</mat-label>
-        <mat-select [formControl]="cultureControl">
-          <mat-option *ngFor="let culture of cultures" [value]="culture">
-            {{culture}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Is Alive</mat-label>
-        <mat-select [formControl]="isAliveControl">
-          <mat-option *ngFor="let option of options" [value]="option">
-            {{option}}
+        <mat-label>Resources</mat-label>
+        <mat-select [formControl]="resourceControl" (selectionChange)="onSearch()">
+          <mat-option *ngFor="let resource of resources" [value]="resource">
+            {{resource}}
           </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
+    <div class="filters">
+      <!-- Book Filter -->
+      <div *ngIf="resourceControl.value === 'Books'" class="ngm book filter ui grid">
+        <div class="eight wide column">
+          <mat-form-field >
+            <mat-label>Start date</mat-label>
+            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startpicker" [formControl]="startDate">
+            <mat-datepicker-toggle matSuffix [for]="startpicker"></mat-datepicker-toggle>
+            <mat-datepicker #startpicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>End date</mat-label>
+            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="endpicker" [formControl]="endDate">
+            <mat-datepicker-toggle matSuffix [for]="endpicker"></mat-datepicker-toggle>
+            <mat-datepicker #endpicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
 
-    <!-- House Filter -->
+      <!-- Character Filter -->
+      <div *ngIf="resourceControl.value === 'Characters'" class="ngm character filter ui grid">
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>Gender</mat-label>
+            <mat-select [formControl]="genderControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let gender of genders" [value]="gender">
+                {{gender}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>Culture</mat-label>
+            <mat-select [formControl]="cultureControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let culture of (cultures$ | async)" [value]="culture">
+                {{culture}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="sixteen wide column">
+          <mat-form-field>
+            <mat-label>Is Alive</mat-label>
+            <mat-select [formControl]="isAliveControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let option of options" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
 
-    <div *ngIf="resourceControl.value === 'Houses'" class="ngm house filter ui  grid">
-      <div class="five wide column">
-        <mat-form-field>
-          <mat-label>Region</mat-label>
-          <mat-select [formControl]="regionControl">
-            <mat-option *ngFor="let region of regions" [value]="region">
-              {{region}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="five wide column">
-        <mat-form-field>
-          <mat-label>Words</mat-label>
-          <mat-select [formControl]="wordsControl">
-            <mat-option *ngFor="let word of words" [value]="word">
-              {{words}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="five wide column">
-        <mat-form-field>
-          <mat-label>Titles</mat-label>
-          <mat-select [formControl]="titlesControl">
-            <mat-option *ngFor="let option of options" [value]="option">
-              {{option}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="five wide column">
-        <mat-form-field>
-          <mat-label>Seats</mat-label>
-          <mat-select [formControl]="seatsControl">
-            <mat-option *ngFor="let option of options" [value]="option">
-              {{option}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="five wide column">
+      <!-- House Filter -->
 
-        <mat-form-field>
-          <mat-label>Died Out</mat-label>
-          <mat-select [formControl]="diedoutControl">
-            <mat-option *ngFor="let option of options" [value]="option">
-              {{option}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="five wide column">
-        <mat-form-field>
-          <mat-label>Ancestral Weapons</mat-label>
-          <mat-select [formControl]="ancesteralWeaponsControl">
-            <mat-option *ngFor="let option of options" [value]="option">
-              {{option}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+      <div *ngIf="resourceControl.value === 'Houses'" class="ngm house filter ui grid">
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>Region</mat-label>
+            <mat-select [formControl]="regionControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let region of (regions$ | async)" [value]="region">
+                {{region}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>Words</mat-label>
+            <mat-select [formControl]="wordsControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let word of words" [value]="word">
+                {{words}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>Titles</mat-label>
+            <mat-select [formControl]="titlesControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let option of options" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>Seats</mat-label>
+            <mat-select [formControl]="seatsControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let option of options" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="eight wide column">
+
+          <mat-form-field>
+            <mat-label>Died Out</mat-label>
+            <mat-select [formControl]="diedoutControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let option of options" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="eight wide column">
+          <mat-form-field>
+            <mat-label>Ancestral Weapons</mat-label>
+            <mat-select [formControl]="ancesteralWeaponsControl" (selectionChange)="onSearch()">
+              <mat-option *ngFor="let option of options" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
     </div>
   </div>
