--- a/src/app/views/components/search-bar/search-bar.component.scss
+++ b/src/app/views/components/search-bar/search-bar.component.scss
@@ -25,9 +25,9 @@
   display: flex;
 }
 
-.ngm.filter mat-form-field {
-  margin-left: 10px;
-}
+// .ngm.filter mat-form-field {
+//   margin-left: 10px;
+// }
 
 @media screen and (max-width: 700px) {
   #primary {
@@ -36,6 +36,16 @@
 
   .ngm.filter {
     display: block;
+  }
+
+  #secondary{
+    padding: 1%;
+    margin: 10px;
+  }
+
+  .row.filter-group {
+    padding: 1%;
+    margin-left: 10px;
   }
 }
 
