--- a/src/app/views/pages/search/search.component.scss
+++ b/src/app/views/pages/search/search.component.scss
@@ -13,3 +13,13 @@ app-search-result {
         width: 30%;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .logo {
+        text-align: center;
+        img {
+            width: 60%;
+            margin-top: 20px;
+        }
+    }
+}
