--- a/src/app/views/pages/detail/detail.component.scss
+++ b/src/app/views/pages/detail/detail.component.scss
@@ -1,7 +1,3 @@
-.ui .card {
-    // width: 50%;
-}
-
 .ui.link.cards {
     display: flex;
     justify-content: center;
@@ -11,4 +7,33 @@
     width: auto;
     height: auto;
     padding: 5%;
+}
+
+@media screen and (max-width: 700px) {
+    .ui.grid {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+
+    .ui.cards.overview {
+        margin-top: 10px
+    }
+
+    #overview {
+        display: none;
+    }
+
+    .sixteen.wide.column {
+        display: contents;
+    }
+
+    .ui.card {
+        margin-top: 10px;
+    }
+}
+@media screen and (min-width: 700px) {
+    #info {
+        display: none;
+    }
 }
