--- a/src/app/views/pages/search/search.component.scss
+++ b/src/app/views/pages/search/search.component.scss
@@ -14,6 +14,10 @@ app-search-result {
     }
 }
 
+.recently.viewed {
+    margin-top: 30px;
+}
+
 @media screen and (max-width: 700px) {
     .logo {
         text-align: center;
